# Foundation-Model-Auto-Annotation-Pipeline

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  middleware.py  rbac.py  security.py
backend/migrations/: env.py
backend/scripts/: seed.py
docs/: API.md  ARCHITECTURE.md
frontend/: Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
helm/fm-auto-annotation/: Chart.yaml  values.yaml
infra/docker/: Dockerfile.api  Dockerfile.worker
infra/terraform/: main.tf
k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  keda-scaledobject.yaml  namespace.yaml  secret.example.yaml  stateful-stores.yaml  worker-deployment.yaml
ml/: README.md  pipeline.py  registry.py  types.py
ml/active_learning/: clustering.py  drift.py  mining.py
ml/confidence/: engine.py
ml/exporters/: __init__.py  base.py  coco.py  cvat.py  labelstudio.py  voc.py  yolo.py
ml/models/: clip_validator.py  grounding_dino.py  sam2.py  vlm.py
monitoring/otel/: otel-collector.yaml
monitoring/prometheus/: prometheus.yml
scripts/: annotate_local.py  annotate_local_real.py
tests/: conftest.py
tests/integration/: test_api_smoke.py
tests/unit/: test_active_learning.py  test_confidence_engine.py  test_exporters.py  test_pipeline_mock.py  test_rbac_and_security.py
workers/: celery_app.py  metrics.py  tasks.py
(+48 files in other folders)
